--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,95 @@
+*{
+    box-sizing: border-box;
+}
+.row::after{
+    content: "";
+    clear: both;
+    display: table;
+}
+[class*="col-"]{
+    float: left;
+    padding: 15px;
+}
+/* For mobile phones: */
+[class*="col-"] {
+    width: 100%;
+}
+@media only screen and (min-width: 600px) {
+    /* For tablets: */
+    .col-s-1 {width: 8.33%;}
+    .col-s-2 {width: 16.66%;}
+    .col-s-3 {width: 25%;}
+    .col-s-4 {width: 33.33%;}
+    .col-s-5 {width: 41.66%;}
+    .col-s-6 {width: 50%;}
+    .col-s-7 {width: 58.33%;}
+    .col-s-8 {width: 66.66%;}
+    .col-s-9 {width: 75%;}
+    .col-s-10 {width: 83.33%;}
+    .col-s-11 {width: 91.66%;}
+    .col-s-12 {width: 100%;}
+}
+@media only screen and (min-width: 768px) {
+    /* For desktop: */
+    .col-1 {width: 8.33%;}
+    .col-2 {width: 16.66%;}
+    .col-3 {width: 25%;}
+    .col-4 {width: 33.33%;}
+    .col-5 {width: 41.66%;}
+    .col-6 {width: 50%;}
+    .col-7 {width: 58.33%;}
+    .col-8 {width: 66.66%;}
+    .col-9 {width: 75%;}
+    .col-10 {width: 83.33%;}
+    .col-11 {width: 91.66%;}
+    .col-12 {width: 100%;}
+}
+html{
+    font-family: "Lucida Sans", sans-serif;
+}
+.header{
+    background-color: darkslateblue;
+    color: azure;
+    padding: 15px;
+}
+.leftmenu{
+    background-color: lightsteelblue;
+}
+.leftmenu ul{
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+.leftmenu li{
+    padding: 8px;
+    margin-bottom: 7px;
+    background-color: burlywood;
+    color: cornsilk;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+.leftmenu li:hover{
+    background-color: darkcyan;
+}
+.main-wrapper div{
+    width: 100%;
+    height: auto;
+    background-color: black;
+}
 .main-wrapper{
-    left: calc(10%);
-    position: fixed;
-}    
+    background-color: lightgray;
+}
+.rightmenu{
+    background-color: lightsteelblue;
+    padding: 15px;
+    color: aliceblue;
+    text-align: center;
+    font-size: 14px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+}
+.footer{
+    background-color: midnightblue;
+    color: lightgreen;
+    text-align: center;
+    font-size: 12px;
+    padding: 15px;
+}
